tests/fixtures/errors/at_in_fn.ksr
// Error: graph reference @ is not allowed in function bodies
param x: Length = 1.0 m;

fn bad_fn(a: Length) -> Length = a + @x;
